SERVER-32444 Coverity analysis defect 102285: PW.PARAMETER_HIDDEN